// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard Accommodations Page Component Should Take Snapshot for Home Component 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 css-et7x9c-MuiTypography-root"
    >
      Accommodations
    </h4>
    <div
      className="css-noiw7-MuiStack-root"
      data-testid="AccommodationscardContainer"
    />
  </div>
</div>
`;

exports[`Dashboard Chat Page Component Should Take Snapshot for Home Component 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthLg css-1oqqzyl-MuiContainer-root"
  >
    <div
      className="css-d3ri6l-MuiStack-root"
    >
      <h4
        className="MuiTypography-root MuiTypography-h4 MuiTypography-gutterBottom css-1vw6mcs-MuiTypography-root"
      >
        Chat
      </h4>
    </div>
  </div>
</div>
`;

exports[`Dashboard Page Component Should Take Snapshot for Home Component 1`] = `
<div
  className="MuiBox-root css-0"
>
  <div
    className="MuiContainer-root MuiContainer-maxWidthXl css-19r6kue-MuiContainer-root"
  >
    <h4
      className="MuiTypography-root MuiTypography-h4 css-et7x9c-MuiTypography-root"
    >
      Hi, Welcome back
    </h4>
    <p
      className="MuiTypography-root MuiTypography-body1 css-17665zs-MuiTypography-root"
    >
      Dashboard View
    </p>
  </div>
</div>
`;
